rezound-0.8.2beta -- 7/8/2003
	This is mostly a quick bug-fix release
	- Added a feature to the shuttle wheel to change rate by semitones (Thanks Gerhard Zintel)
	- More complete Russian translation
	- Fixed a compile problem on debian woody
	- Fixed a data directory search bug causing startup failure
	- Fixed segfault on "Add Cue"
	- Fixed a recording sample rate issue
	- Fixed a RH9 rpm rebuild issue
	- FOX 1.1.30 will now work

rezound-0.8.1beta -- 6/26/2003
	This is mostly a quick bug-fix release
	- Made some i18n improvements (including font and error fixes)
	- Fixed several compile errors that people were having with 0.8.0beta
	- Fixed a pthread_rwlock_t compile error

rezound-0.8.0beta -- 6/24/2003
	This is a major new feature release, and it has been a while
	- Added a new play mode: Loop Selection but Skip Most of the Middle
	- Added a new play mode: Loop Selection but Insert a Gap before Repeating
	- Added a Monoize action under the Remaster menu
	- Added actions under the Edit->Selection menu to Grow or Slide the selection
	- Added a playback Balance Meter
	- Added a playback Stereo Phase Meter
	- Added a "Generate Noise" action
	- Added preliminary FLAC file format support
	- Added toggle-able vertical lines drawn on the waveview down from the cue positions
	- Several changes to make it not nearly as CPU intensive
	- Cues are now draggable and have focus for keyboard manipulation (cues movable with keyboard later)
	- The layout of the menu is now defined in a file so it can be rearraged (manual editing of [~/.rezound/]menu.dat for now)
	- DC offsets can now be compensated for when recording
	- Now clip indications can be toggled on or off
	- Added initial support to load audio from and dump audio to a MIDI device or file (just open/save /dev/midi)
		- More work needs to be done about naming the file
	- Added gettext support for i18n, so let the translations role in.  (Still have font issues though)