@@ -1,4 +1,4 @@
-ReZound 0.8.2beta Installation instructions 
+ReZound 0.8.3beta Installation instructions 
 
 If building/installing directly from the CVS repository see CVS-INSTALL
 	
