@@ -12,14 +12,12 @@ fi
 
 dir=rezound-bin-x86-linux-$1
 
-mkdir $dir
-configure --prefix=`pwd`/$dir --enable-standalone --with-audiofile-include=/usr/local/include --with-audiofile-path=/usr/local/lib --with-FOX-include=/usr/local/include --with-FOX-path=/usr/local/lib
-
-make clean
-make
-make install-strip
-
-tar -cvzf ~/$dir.tar.gz $dir
-
 rm -rf $dir
 
+mkdir $dir \
+&& configure --prefix=`pwd`/$dir --enable-standalone --with-audiofile-include=/usr/local/include --with-audiofile-path=/usr/local/lib --with-FOX-include=/usr/local/include --with-FOX-path=/usr/local/lib \
+&& make clean \
+&& make \
+&& make install-strip \
+&& tar -cvzf ~/$dir.tar.gz $dir \
+&& rm -rf $dir
